2012-11-29  Jacky Jiang  <zhajiang@rim.com>

        [BlackBerry] window.open can load url twice which can cause security and timing issues
        https://bugs.webkit.org/show_bug.cgi?id=103670

        Reviewed by Yong Li.

        PR: 252234
        When we call window.open() in JS, DOMWindow will create a window and
        change the url to load the resources. However, during the window
        creation, we dispatch an OpenWindow event with the url to browser side
        and browser side loads the url thereafter as well.
        DOMWindow::createWindow() is only required to create the window not to
        load url as far as I can tell. This is unneccessary and can cause
        unexpected issues. So just pass an empty url instead to avoid
        the double-load issue.

        * WebCoreSupport/ChromeClientBlackBerry.cpp:
        (WebCore::ChromeClientBlackBerry::createWindow):

2012-11-29  Otto Derek Cheung  <otcheung@rim.com>

        [BlackBerry] Modifying GeoClientBlackBerry to switch between high and low accuracy
        https://bugs.webkit.org/show_bug.cgi?id=103666

        Reviewed by Yong Li.

        Internally reviewed by Yong Li.

        PR 243420

        Updating GeolocationClientBlackBerry to switch accuracy when GeolocationController
        calls setEnableHighAccuracy.

        * WebCoreSupport/GeolocationClientBlackBerry.cpp:
        (GeolocationClientBlackBerry::startUpdating):
        (GeolocationClientBlackBerry::setEnableHighAccuracy):

2012-11-29  Andrew Lo  <anlo@rim.com>

        [BlackBerry] Do not adjust scroll position on viewport resizes that are not orientation change related
        https://bugs.webkit.org/show_bug.cgi?id=103659

        Reviewed by Rob Buis.
        Internally reviewed by Gen Mak.

        Internal PR253893.
        Only adjust scroll position during an orientation change
        when setting viewport size.
        We don't want the scroll position jumping around when opening
        & closing the VKB.
